--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300"
     rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 
 <body>
