--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
 <body>
   <app-root></app-root>
 </body>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 
 </html>
