--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300"
     rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="Ybr_4IKpQ26nsSogbC8nUeDnTWqqZ8ymKg-cDXAVxlA" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 
